Development not completed because bored with this project.

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 			</div>
 		</div>	
 		
-		<!-- Jumbotron -->
-		<div class="jumbotron">
+		<!-- Hero Image -->
+		<div class="hero">
 			<div class="container">
 				<h4>Browse.</h4>
 				<h4>Create.</h4>
@@ -43,6 +43,43 @@
 		</div>
 		
 		<!-- Question -->
+		<div class="question">
+			<p>Always have the answer to "What's for dinner?"</p>
+			<a href="#" class="learn-button">Learn More</a>
+		</div>
+		
+		
+		<!-- Section -->
+		<section>
+			<div class="container">
+				<h3>Newest Contributions</h3>
+				
+				<div class="row">
+					<div class="col-md-4">
+						<h4>Breakfast</h4>
+						<p>Maple French Toast <br /> Rolled Oats with Berries
+						</p>
+					</div>
+
+					<div class="col-md-4">
+						<h4>Dinner</h4>
+						<p>Black Bean Stuffed Peppers <br /> Pesto Pasta with Spinach
+						</p>
+					</div>
+
+					<div class="col-md-4">
+						<h4>Dessert</h4>
+						<p>German Chocolate Cake <br /> Hazelnut Tiramisu
+						</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		
+		<!-- Footer -->
+		<footer>
+			<p>© 2014 BestBite</p>
+		</footer>
 		
 	</body>
 	
